tests/baselines/reference/ignoredJsxAttributes.errors.txt
tests/cases/compiler/ignoredJsxAttributes.tsx(3,24): error TS2307: Cannot find module 'react' or its corresponding type declarations.
tests/cases/compiler/ignoredJsxAttributes.tsx(10,39): error TS2503: Cannot find namespace 'JSX'.
tests/cases/compiler/ignoredJsxAttributes.tsx(14,5): error TS2322: Type 'number' is not assignable to type 'string'.
tests/cases/compiler/ignoredJsxAttributes.tsx(18,11): error TS2741: Property 'foo' is missing in type '{ bar: string; "data-yadda": number; }' but required in type 'Props'.


==== tests/cases/compiler/ignoredJsxAttributes.tsx (4 errors) ====
    // Repro from #44797
    
    import * as React from "react";
                           ~~~~~~~
!!! error TS2307: Cannot find module 'react' or its corresponding type declarations.
    
    interface Props {
        foo: string;
        [dataProp: string]: string;
    }
    
    declare function Yadda(props: Props): JSX.Element;
                                          ~~~
!!! error TS2503: Cannot find namespace 'JSX'.
    
    let props: Props = {
        foo: "",
        "data-yadda": 42,  // Error
        ~~~~~~~~~~~~
!!! error TS2322: Type 'number' is not assignable to type 'string'.
!!! related TS6501 tests/cases/compiler/ignoredJsxAttributes.tsx:7:5: The expected type comes from this index signature.
    };
    
    let x1 = <Yadda foo="hello" data-yadda={42}/>;
    let x2 = <Yadda bar="hello" data-yadda={42}/>;  // Error
              ~~~~~
!!! error TS2741: Property 'foo' is missing in type '{ bar: string; "data-yadda": number; }' but required in type 'Props'.
!!! related TS2728 tests/cases/compiler/ignoredJsxAttributes.tsx:6:5: 'foo' is declared here.
    